# conversational-voice-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/voice_agent/: __init__.py  api.py  audio.py  config.py  llm.py  main.py  rtc.py  rtc_tracks.py  stt.py  tts.py  vad.py  viseme.py
static/: index.html
